java/cuvs-java/src/main/java/com/nvidia/cuvs/panama/ivf_flat_h.java


  /**
   * Function descriptor for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearch(cuvsResources_t res, cuvsIvfFlatSearchParams_t search_params, cuvsIvfFlatIndex_t index, DLManagedTensor *queries, DLManagedTensor *neighbors, DLManagedTensor *distances)
   * }
   */
  public static FunctionDescriptor cuvsIvfFlatSearch$descriptor() {
    return cuvsIvfFlatSearch.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearch(cuvsResources_t res, cuvsIvfFlatSearchParams_t search_params, cuvsIvfFlatIndex_t index, DLManagedTensor *queries, DLManagedTensor *neighbors, DLManagedTensor *distances)
   * }
   */
  public static MethodHandle cuvsIvfFlatSearch$handle() {
    return cuvsIvfFlatSearch.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearch(cuvsResources_t res, cuvsIvfFlatSearchParams_t search_params, cuvsIvfFlatIndex_t index, DLManagedTensor *queries, DLManagedTensor *neighbors, DLManagedTensor *distances)
   * }
   */
  public static MemorySegment cuvsIvfFlatSearch$address() {
    return cuvsIvfFlatSearch.ADDR;
  }

  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearch(cuvsResources_t res, cuvsIvfFlatSearchParams_t search_params, cuvsIvfFlatIndex_t index, DLManagedTensor *queries, DLManagedTensor *neighbors, DLManagedTensor *distances)
   * }
   */
  public static int cuvsIvfFlatSearch(long res, MemorySegment search_params, MemorySegment index, MemorySegment queries,
      MemorySegment neighbors, MemorySegment distances) {
    var mh$ = cuvsIvfFlatSearch.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatSearch", res, search_params, index, queries, neighbors, distances);
      }
      return (int) mh$.invokeExact(res, search_params, index, queries, neighbors, distances);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class cuvsIvfFlatSerialize {
    public static final FunctionDescriptor DESC = FunctionDescriptor.of(ivf_flat_h.C_INT, ivf_flat_h.C_LONG,
        ivf_flat_h.C_POINTER, ivf_flat_h.C_POINTER);

    public static final MemorySegment ADDR = ivf_flat_h.findOrThrow("cuvsIvfFlatSerialize");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSerialize(cuvsResources_t res, const char *filename, cuvsIvfFlatIndex_t index)
   * }
   */
  public static FunctionDescriptor cuvsIvfFlatSerialize$descriptor() {
    return cuvsIvfFlatSerialize.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSerialize(cuvsResources_t res, const char *filename, cuvsIvfFlatIndex_t index)
   * }
   */
  public static MethodHandle cuvsIvfFlatSerialize$handle() {
    return cuvsIvfFlatSerialize.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSerialize(cuvsResources_t res, const char *filename, cuvsIvfFlatIndex_t index)
   * }
   */
  public static MemorySegment cuvsIvfFlatSerialize$address() {
    return cuvsIvfFlatSerialize.ADDR;
  }

  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSerialize(cuvsResources_t res, const char *filename, cuvsIvfFlatIndex_t index)
   * }
   */
  public static int cuvsIvfFlatSerialize(long res, MemorySegment filename, MemorySegment index) {
    var mh$ = cuvsIvfFlatSerialize.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatSerialize", res, filename, index);
      }
      return (int) mh$.invokeExact(res, filename, index);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class cuvsIvfFlatDeserialize {
    public static final FunctionDescriptor DESC = FunctionDescriptor.of(ivf_flat_h.C_INT, ivf_flat_h.C_LONG,
        ivf_flat_h.C_POINTER, ivf_flat_h.C_POINTER);

    public static final MemorySegment ADDR = ivf_flat_h.findOrThrow("cuvsIvfFlatDeserialize");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatDeserialize(cuvsResources_t res, const char *filename, cuvsIvfFlatIndex_t index)
   * }
   */
  public static FunctionDescriptor cuvsIvfFlatDeserialize$descriptor() {
    return cuvsIvfFlatDeserialize.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatDeserialize(cuvsResources_t res, const char *filename, cuvsIvfFlatIndex_t index)
   * }
   */
  public static MethodHandle cuvsIvfFlatDeserialize$handle() {
    return cuvsIvfFlatDeserialize.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatDeserialize(cuvsResources_t res, const char *filename, cuvsIvfFlatIndex_t index)
   * }
   */
  public static MemorySegment cuvsIvfFlatDeserialize$address() {
    return cuvsIvfFlatDeserialize.ADDR;
  }

  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatDeserialize(cuvsResources_t res, const char *filename, cuvsIvfFlatIndex_t index)
   * }
   */
  public static int cuvsIvfFlatDeserialize(long res, MemorySegment filename, MemorySegment index) {
    var mh$ = cuvsIvfFlatDeserialize.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatDeserialize", res, filename, index);
      }
      return (int) mh$.invokeExact(res, filename, index);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class cuvsIvfFlatExtend {
    public static final FunctionDescriptor DESC = FunctionDescriptor.of(ivf_flat_h.C_INT, ivf_flat_h.C_LONG,
        ivf_flat_h.C_POINTER, ivf_flat_h.C_POINTER, ivf_flat_h.C_POINTER);

    public static final MemorySegment ADDR = ivf_flat_h.findOrThrow("cuvsIvfFlatExtend");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatExtend(cuvsResources_t res, DLManagedTensor *new_vectors, DLManagedTensor *new_indices, cuvsIvfFlatIndex_t index)
   * }
   */
  public static FunctionDescriptor cuvsIvfFlatExtend$descriptor() {
    return cuvsIvfFlatExtend.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatExtend(cuvsResources_t res, DLManagedTensor *new_vectors, DLManagedTensor *new_indices, cuvsIvfFlatIndex_t index)
   * }
   */
  public static MethodHandle cuvsIvfFlatExtend$handle() {
    return cuvsIvfFlatExtend.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatExtend(cuvsResources_t res, DLManagedTensor *new_vectors, DLManagedTensor *new_indices, cuvsIvfFlatIndex_t index)
   * }
   */
  public static MemorySegment cuvsIvfFlatExtend$address() {
    return cuvsIvfFlatExtend.ADDR;
  }

  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatExtend(cuvsResources_t res, DLManagedTensor *new_vectors, DLManagedTensor *new_indices, cuvsIvfFlatIndex_t index)
   * }
   */
  public static int cuvsIvfFlatExtend(long res, MemorySegment new_vectors, MemorySegment new_indices,
      MemorySegment index) {
    var mh$ = cuvsIvfFlatExtend.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatExtend", res, new_vectors, new_indices, index);
      }
      return (int) mh$.invokeExact(res, new_vectors, new_indices, index);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static final long _POSIX_C_SOURCE = 200809L;

  /**
   * {@snippet lang = c : * #define _POSIX_C_SOURCE 200809
   * }
   */
  public static long _POSIX_C_SOURCE() {
    return _POSIX_C_SOURCE;
  }

  private static final int __TIMESIZE = (int) 64L;

  /**
   * {@snippet lang = c : * #define __TIMESIZE 64
   * }
   */
  public static int __TIMESIZE() {
    return __TIMESIZE;
  }

  private static final long __STDC_IEC_60559_BFP__ = 201404L;

  /**
   * {@snippet lang = c : * #define __STDC_IEC_60559_BFP__ 201404
   * }
   */
  public static long __STDC_IEC_60559_BFP__() {
    return __STDC_IEC_60559_BFP__;
  }

  private static final long __STDC_IEC_60559_COMPLEX__ = 201404L;

  /**
   * {@snippet lang = c : * #define __STDC_IEC_60559_COMPLEX__ 201404
   * }
   */
  public static long __STDC_IEC_60559_COMPLEX__() {
    return __STDC_IEC_60559_COMPLEX__;
  }

  private static final long __STDC_ISO_10646__ = 201706L;

  /**
   * {@snippet lang = c : * #define __STDC_ISO_10646__ 201706
   * }
   */
  public static long __STDC_ISO_10646__() {
    return __STDC_ISO_10646__;
  }

  private static final int __WCHAR_MAX = (int) 2147483647L;

  /**
   * {@snippet lang = c : * #define __WCHAR_MAX 2147483647
   * }
   */
  public static int __WCHAR_MAX() {
    return __WCHAR_MAX;
  }

  private static final int __WCHAR_MIN = (int) -2147483648L;

  /**
   * {@snippet lang = c : * #define __WCHAR_MIN -2147483648
   * }
   */
  public static int __WCHAR_MIN() {
    return __WCHAR_MIN;
  }

  private static final int INT8_MIN = (int) -128L;

  /**
   * {@snippet lang = c : * #define INT8_MIN -128
   * }
   */
  public static int INT8_MIN() {
    return INT8_MIN;
  }

  private static final int INT16_MIN = (int) -32768L;

  /**
   * {@snippet lang = c : * #define INT16_MIN -32768
   * }
   */
  public static int INT16_MIN() {
    return INT16_MIN;
  }

  private static final int INT32_MIN = (int) -2147483648L;

  /**
   * {@snippet lang = c : * #define INT32_MIN -2147483648
   * }
   */
  public static int INT32_MIN() {
    return INT32_MIN;
  }

  private static final long INT64_MIN = -9223372036854775808L;

  /**
   * {@snippet lang = c : * #define INT64_MIN -9223372036854775808
   * }
   */
  public static long INT64_MIN() {
    return INT64_MIN;
  }

  private static final int INT8_MAX = (int) 127L;

  /**
   * {@snippet lang = c : * #define INT8_MAX 127
   * }
   */
  public static int INT8_MAX() {
    return INT8_MAX;
  }

  private static final int INT16_MAX = (int) 32767L;

  /**
   * {@snippet lang = c : * #define INT16_MAX 32767
   * }
   */
  public static int INT16_MAX() {
    return INT16_MAX;
  }

  private static final int INT32_MAX = (int) 2147483647L;

  /**
   * {@snippet lang = c : * #define INT32_MAX 2147483647
   * }
   */
  public static int INT32_MAX() {
    return INT32_MAX;
  }

  private static final long INT64_MAX = 9223372036854775807L;

  /**
   * {@snippet lang = c : * #define INT64_MAX 9223372036854775807
   * }
   */
  public static long INT64_MAX() {
    return INT64_MAX;
  }

  private static final int UINT8_MAX = (int) 255L;

  /**
   * {@snippet lang = c : * #define UINT8_MAX 255
   * }
   */
  public static int UINT8_MAX() {
    return UINT8_MAX;
  }

  private static final int UINT16_MAX = (int) 65535L;

  /**
   * {@snippet lang = c : * #define UINT16_MAX 65535
   * }
   */
  public static int UINT16_MAX() {
    return UINT16_MAX;
  }

  private static final int UINT32_MAX = (int) 4294967295L;

  /**
   * {@snippet lang = c : * #define UINT32_MAX 4294967295
   * }
   */
  public static int UINT32_MAX() {
    return UINT32_MAX;
  }

  private static final long UINT64_MAX = -1L;

  /**
   * {@snippet lang = c : * #define UINT64_MAX -1
   * }
   */
  public static long UINT64_MAX() {
    return UINT64_MAX;
  }

  private static final int INT_LEAST8_MIN = (int) -128L;

  /**
   * {@snippet lang = c : * #define INT_LEAST8_MIN -128
   * }
   */
  public static int INT_LEAST8_MIN() {
    return INT_LEAST8_MIN;
  }

  private static final int INT_LEAST16_MIN = (int) -32768L;

  /**
   * {@snippet lang = c : * #define INT_LEAST16_MIN -32768
   * }
   */
  public static int INT_LEAST16_MIN() {
    return INT_LEAST16_MIN;
  }
